--- a/app/views/appeal/lbc/index.html
+++ b/app/views/appeal/lbc/index.html
@@ -27,8 +27,8 @@
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'Work in progress'
+        classes: 'govuk-tag--green govuk-!-margin-left-2',
+        text: 'Ready for research'
       }) }}
     </h2>
 
@@ -45,33 +45,43 @@
 
     {{ govukButton({
       html: 'View prototype',
-      href: 'v'+version+'/task-list?lbc=1',
+      href: 'v'+version+'/before-you-continue?lbc=1',
       isStartButton: true
     }) }}
 
-    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+    {% set v2HTML %}
 
-    {% set version = "1" %}
-    <h2 class="govuk-heading-m">
-      Version {{version}}
-      {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'Work in progress'
+      {% set version = "1" %}
+
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          this journey is the same as the full appeal submission journey
+        </li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/task-list',
+        isStartButton: true
       }) }}
-    </h2>
 
-    <p class="govuk-!-margin-bottom-2">Changes:</p>
+    {% endset -%}
 
-    <ul class="govuk-list govuk-list--bullet">
-      <li>
-        this journey is the same as the full appeal submission journey
-      </li>
-    </ul>
-
-    {{ govukButton({
-      html: 'View prototype',
-      href: 'v'+version+'/task-list',
-      isStartButton: true
+    {{ govukAccordion({
+      id: 'previous',
+      classes: 'govuk-!-margin-top-9',
+      items: [
+        {
+          heading: {
+            html: 'Version 2 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v2HTML
+          }
+        }
+      ]
     }) }}
 
   </div>
