--- a/app/views/interested/index.html
+++ b/app/views/interested/index.html
@@ -30,8 +30,8 @@
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'In progress'
+        classes: 'govuk-tag--green govuk-!-margin-left-2',
+        text: 'Ready for research'
       }) }}
     </h2>
 
@@ -51,96 +51,116 @@
       isStartButton: true
     }) }}
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+    {% set v7HTML %}
 
-    {% set version = "7" %}
+      {% set version = "7" %}
 
-    <h2 class="govuk-heading-m">
-      Version {{version}}
-      {{ govukTag({
-        classes: 'govuk-tag--blue govuk-!-margin-left-2',
-        text: 'Ready for research'
+      <p class="govuk-body">
+        Changes:
+      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>small content updates</li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'find-appeal/v'+version+'/guidance',
+        isStartButton: true
       }) }}
-    </h2>
 
-    <p class="govuk-body">
-      Changes:
-    </p>
+    {% endset -%}
 
-    <ul class="govuk-list govuk-list--bullet">
-      <li>small content updates</li>
-    </ul>
+    {% set v6HTML %}
 
-    {{ govukButton({
-      html: 'View prototype',
-      href: 'find-appeal/v'+version+'/guidance',
-      isStartButton: true
-    }) }}
+      {% set version = "6" %}
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+      <p class="govuk-body">
+        Changes:
+      </p>
 
-    {% set version = "6" %}
+      <ul class="govuk-list govuk-list--bullet">
+        <li>content updates</li>
+        <li>only using tabs when there is a decision</li>
+        <li>changed some language ‘Comments’ > ‘Comment’ for the find journey</li>
+        <li>small updates to presentation for open/current appeals</li>
+      </ul>
 
-    <h2 class="govuk-heading-m">
-      Version {{version}}
-      {{ govukTag({
-        classes: 'govuk-tag--blue govuk-!-margin-left-2',
-        text: 'Ready for research'
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'find-appeal/v'+version+'/guidance',
+        isStartButton: true
       }) }}
-    </h2>
 
-    <p class="govuk-body">
-      Changes:
-    </p>
+    {% endset -%}
 
-    <ul class="govuk-list govuk-list--bullet">
-      <li>content updates</li>
-      <li>only using tabs when there is a decision</li>
-      <li>changed some language ‘Comments’ > ‘Comment’ for the find journey</li>
-      <li>small updates to presentation for open/current appeals</li>
-    </ul>
+    {% set v5HTML %}
 
-    {{ govukButton({
-      html: 'View prototype',
-      href: 'find-appeal/v'+version+'/guidance',
-      isStartButton: true
-    }) }}
+      {% set version = "5" %}
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+      <p class="govuk-body">
+        Researched October 2022<br>
+        <a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/1074397185">
+          Confluence user research notes
+        </a>.
+      </p>
 
-    {% set version = "5" %}
+      <p class="govuk-body">
+        This is the previous design work for interested parties, finding and commenting on an appeal.
+      </p>
 
-    <h2 class="govuk-heading-m">
-      Version {{version}}
-      {{ govukTag({
-        classes: 'govuk-tag--blue govuk-!-margin-left-2',
-        text: 'Ready for research'
+      <p class="govuk-body">
+        Changes:
+      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>moved the work to the new prototype (<a href="https://appeals-prototype-archive.herokuapp.com/interested-party/v4/guidance" class="govuk-link govuk-link--no-visited-state">see version 4</a>)</li>
+        <li>invite to comment and GOVUK guidance entry points</li>
+        <li>updated to align with newer service</li>
+        <li>updated tag colours to align them with GDS style</li>
+        <li>leads with address search</li>
+        <li>added confirmation email</li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'find-appeal/v'+version+'/guidance',
+        isStartButton: true
       }) }}
-    </h2>
 
-    <p class="govuk-body">
-      This is the previous design work for interested parties, finding and commenting on an appeal.
-    </p>
+    {% endset -%}
 
-    <p class="govuk-body">
-      Changes:
-    </p>
+    {{ govukAccordion({
+      id: 'previous',
+      classes: 'govuk-!-margin-top-9',
+      items: [
 
-    <ul class="govuk-list govuk-list--bullet">
-      <li>moved the work to the new prototype (<a href="https://pins-appeals.herokuapp.com/interested-party/v4/guidance" class="govuk-link govuk-link--no-visited-state">see version 4</a>)</li>
-      <li>invite to comment and GOVUK guidance entry points</li>
-      <li>updated to align with newer service</li>
-      <li>updated tag colours to align them with GDS style</li>
-      <li>leads with address search</li>
-      <li>added confirmation email</li>
-    </ul>
-
-    {{ govukButton({
-      html: 'View prototype',
-      href: 'find-appeal/v'+version+'/guidance',
-      isStartButton: true
+        {
+          heading: {
+            html: 'Version 7 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v7HTML
+          }
+        },
+        {
+          heading: {
+            html: 'Version 6 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v6HTML
+          }
+        },
+        {
+          heading: {
+            html: 'Version 5 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-2">Researched</strong>'
+          },
+          content: {
+            html: v5HTML
+          }
+        }
+      ]
     }) }}
-
 
 
     <!-- below is the variables form -->
