--- a/app/views/manage/access/v2/service-invite.html
+++ b/app/views/manage/access/v2/service-invite.html
@@ -38,7 +38,7 @@
   </ul>
 
   <h2 class="govuk-heading-m">
-    What you can do
+    What to do next
   </h2>
 
   <ol class="govuk-list govuk-list--number">
