--- a/app/views/manage/appeals/v4/index.html
+++ b/app/views/manage/appeals/v4/index.html
@@ -66,6 +66,7 @@
         Add and remove users
       </a>
     </p>
+
   </div>
 
   {% if data['no-appeals'] != 'true' %}
@@ -73,148 +74,235 @@
 
       {% set appealsList %}
 
-        {{ govukTable({
-          classes: 'govuk-!-margin-top-3',
-          caption: 'Current appeals',
-          captionClasses: 'govuk-table__caption--m',
-          firstCellIsHeader: false,
-          head: [
-            {
-              html: 'Appeal number'
-            },
-            {
-              html: 'Application number'
-            },
-            {
-              html: 'Deadline'
-            },
-            {
-              html: 'Due in',
-              format: 'numeric'
-            },
-            {
-              html: 'To do',
-              format: 'numeric'
-            }
-          ],
-          rows: [
-            [
+        {% if data['current-appeals'] != 'no' %}
+
+          {{ govukTable({
+            classes: 'govuk-!-margin-top-3',
+            caption: 'Current appeals',
+            captionClasses: 'govuk-table__caption--m',
+            firstCellIsHeader: false,
+            head: [
               {
-                html: '<a href="appeal-details?appealCode=1345264&action=">1345264</a>'
+                html: 'Appeal number'
               },
               {
-                html: '23/04125/FUL'
+                html: 'Application number'
               },
               {
-                html: '3' | daysInFuture
+                html: 'Deadline'
               },
               {
-                html: '3 days',
+                html: 'Due in',
                 format: 'numeric'
               },
               {
-                html: '<a href="/manage/questionnaire-has/v2/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
-                format: 'numeric'
-              }
-            ] if data['questionnaire'] != 'complete',
-            [
-              {
-                html: '<a href="appeal-details?appealCode=1345260&action=">1345260</a>'
-              },
-              {
-                html: '21/02939/FUL'
-              },
-              {
-                html: '6' | daysInFuture
-              },
-              {
-                html: '6 days',
-                format: 'numeric'
-              },
-              {
-                html: '<a href="/manage/questionnaire-has/v2/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+                html: 'To do',
                 format: 'numeric'
               }
             ],
-            [
-              {
-                html: '<a href="appeal-details?appealCode=1345172&action=">1345172</a>'
-              },
-              {
-                html: '21/04122/FUL'
-              },
-              {
-                html: '7' | daysInFuture
-              },
-              {
-                html: '7 days',
-                format: 'numeric'
-              },
-              {
-                html: '<a href="/manage/questionnaire-has/v2/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
-                format: 'numeric'
-              }
+            rows: [
+              [
+                {
+                  html: '<a href="appeal-details?appealCode=1345264&action=">1345264</a>'
+                },
+                {
+                  html: '23/04125/FUL'
+                },
+                {
+                  html: '3' | daysInFuture
+                },
+                {
+                  html: '3 days',
+                  format: 'numeric'
+                },
+                {
+                  html: '<a href="/manage/questionnaire-has/v2/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+                  format: 'numeric'
+                }
+              ] if data['questionnaire'] != 'complete',
+              [
+                {
+                  html: '<a href="appeal-details?appealCode=1345260&action=">1345260</a>'
+                },
+                {
+                  html: '22/02939/FUL'
+                },
+                {
+                  html: '6' | daysInFuture
+                },
+                {
+                  html: '6 days',
+                  format: 'numeric'
+                },
+                {
+                  html: '<a href="/manage/questionnaire-has/v2/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+                  format: 'numeric'
+                }
+              ],
+              [
+                {
+                  html: '<a href="appeal-details?appealCode=1345172&action=">1345172</a>'
+                },
+                {
+                  html: '23/04122/FUL'
+                },
+                {
+                  html: '7' | daysInFuture
+                },
+                {
+                  html: '7 days',
+                  format: 'numeric'
+                },
+                {
+                  html: '<a href="/manage/questionnaire-has/v2/task-list?action="><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+                  format: 'numeric'
+                }
+              ]
             ]
-          ]
-        }) }}
+          }) }}
+
+        {% else %}
+
+          <h2 class="govuk-heading-m">
+            Current appeals
+          </h2>
+
+          <p class="govuk-body">
+            There are no current appeals to action
+          </p>
+
+        {% endif %}
+
+        {% if data['received-appeals'] == 'yes' %}
+
+          {{ govukTable({
+            classes: 'govuk-!-margin-top-3',
+            caption: 'Received appeals',
+            captionClasses: 'govuk-table__caption--m',
+            firstCellIsHeader: false,
+            head: [
+              {
+                html: 'Appeal number',
+                classes: 'govuk-!-width-one-quarter'
+              },
+              {
+                html: 'Application number',
+                classes: 'govuk-!-width-one-third'
+              },
+              {
+                html: 'Received'
+              }
+            ],
+            rows: [
+              [
+                {
+                  html: '<a href="appeal-details?appealCode=1386155&action=">1386155</a>'
+                },
+                {
+                  html: '23/04253/FUL'
+                },
+                {
+                  html: '2' | daysAgo
+                }
+              ],
+              [
+                {
+                  html: '<a href="appeal-details?appealCode=1392871&action=">1392871</a>'
+                },
+                {
+                  html: '23/05009/FUL'
+                },
+                {
+                  html: '1' | daysAgo
+                }
+              ]
+            ]
+          }) }}
+
+        {% elif data['received-appeals'] == 'no' %}
+
+          <h2 class="govuk-heading-m">
+            Received appeals
+          </h2>
+
+          <p class="govuk-body">
+            There are no received appeals
+          </p>
+
+        {% endif %}
+
       {% endset -%}
 
       {% set submittedAppealsList %}
 
-        {{ govukTable({
-          classes: 'govuk-!-margin-top-3',
-          caption: 'Submitted appeals',
-          captionClasses: 'govuk-table__caption--m',
-          firstCellIsHeader: false,
-          head: [
-            {
-              html: 'Appeal number'
-            },
-            {
-              html: 'Application number'
-            },
-            {
-              html: 'Deadline'
-            },
-            {
-              html: 'Status'
-            }
-          ],
-          rows: [
-            [
+        {% if data['submitted-appeals'] == 'yes' %}
+
+          {{ govukTable({
+            classes: 'govuk-!-margin-top-3',
+            caption: 'Submitted appeals',
+            captionClasses: 'govuk-table__caption--m',
+            firstCellIsHeader: false,
+            head: [
               {
-                html: '<a href="appeal-details?appealCode=1345264&action=">1345264</a>'
+                html: 'Appeal number'
               },
               {
-                html: '23/04125/FUL'
+                html: 'Application number'
               },
               {
-                html: '3' | daysInFuture
+                html: 'Deadline'
               },
               {
-                html: '<strong class="govuk-tag govuk-tag--yellow">
-                         Waiting
-                       </strong>'
+                html: 'Status'
               }
-            ] if data['questionnaire'] == 'complete',
-            [
-              {
-                html: '<a href="appeal-details?appealCode=1345260&action=">1345260</a>'
-              },
-              {
-                html: '21/02939/FUL'
-              },
-              {
-                html: ''
-              },
-              {
-                html: '<strong class="govuk-tag govuk-tag--blue">
-                         In progress
-                       </strong>'
-              }
+            ],
+            rows: [
+              [
+                {
+                  html: '<a href="appeal-details?appealCode=1345264&action=">1345264</a>'
+                },
+                {
+                  html: '23/04125/FUL'
+                },
+                {
+                  html: '3' | daysInFuture
+                },
+                {
+                  html: '<strong class="govuk-tag govuk-tag--yellow">
+                           Waiting
+                         </strong>'
+                }
+              ] if data['questionnaire'] == 'complete',
+              [
+                {
+                  html: '<a href="appeal-details?appealCode=1345260&action=">1345260</a>'
+                },
+                {
+                  html: '23/02939/FUL'
+                },
+                {
+                  html: ''
+                },
+                {
+                  html: '<strong class="govuk-tag govuk-tag--blue">
+                           In progress
+                         </strong>'
+                }
+              ]
             ]
-          ]
-        }) }}
+          }) }}
+
+        {% else %}
+
+          <h2 class="govuk-heading-m">
+            Submitted appeals
+          </h2>
+
+          <p class="govuk-body">
+            There are no submitted appeals
+          </p>
+
+        {% endif %}
 
       {% endset -%}
 
