--- a/app/views/manage/questionnaire-has/v2/constraints/affected-listed-buildings.html
+++ b/app/views/manage/questionnaire-has/v2/constraints/affected-listed-buildings.html
@@ -38,9 +38,9 @@
                 visuallyHiddenText: '155, York Road, Bedminster, Bristol, BS3 4AL'
               },
               value: {
-                html: (data['historicenglandsearchnumber'] or '1282050')+
+                html: '<span class="govuk-visually-hidden">List entry number </span>'+(data['historicenglandsearchnumber'] or '1282050')+
                       '<br>Grade II listed building'+
-                      '<br>155, York Road, Bedminster, Bristol, BS3 4AL'
+                      '<br>138-142 (even) York Road'
               },
               actions: {
                 items: [
@@ -58,7 +58,7 @@
                 visuallyHiddenText: '155, York Road, Bedminster, Bristol, BS3 4AL'
               },
               value: {
-                html: (data['historicenglandsearchnumber'] or '1282051')+
+                html: '<span class="govuk-visually-hidden">List entry number </span>'+(data['historicenglandsearchnumber'] or '1282051')+
                       '<br>Grade II listed building'+
                       '<br>156, York Road, Bedminster, Bristol, BS3 4AL'
               },
