LPA dashboard content and heading size changes

--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -50,25 +50,25 @@
       <ul class="govuk-list govuk-list--bullet">
 
         <li>
-          <a href="v4/?action=&current-appeals=yes&received-appeals=yes">
+          <a href="v4/?action=&questionnaire=&submitted-appeals=yes&current-appeals=yes&received-appeals=yes">
             Appeals to action and received appeals
           </a>
         </li>
 
         <li>
-          <a href="v4/?no-appeals=&current-appeals=yes&received-appeals=no">
+          <a href="v4/?no-appeals=&questionnaire=&current-appeals=yes&received-appeals=no">
             Appeals to action, no received appeals
           </a>
         </li>
 
         <li>
-          <a href="v4/?action=&submitted-appeals=yes&received-appeals=yes&current-appeals=yes#submitted-appeals">
+          <a href="v4/?action=&submitted-appeals=yes&questionnaire=&received-appeals=yes&current-appeals=yes#submitted-appeals">
             Submitted appeals
           </a>
         </li>
 
         <li>
-          <a href="v4/?action=&submitted-appeals=no&received-appeals=yes&current-appeals=yes#submitted-appeals">
+          <a href="v4/?action=&submitted-appeals=no&questionnaire=&received-appeals=yes&current-appeals=yes#submitted-appeals">
             No Submitted appeals
           </a>
         </li>
