--- a/app/views/manage/appeals/v4/index.html
+++ b/app/views/manage/appeals/v4/index.html
@@ -294,7 +294,7 @@
 
         {% else %}
 
-          <h2 class="govuk-heading-m">
+          <h2 class="govuk-heading-l">
             Submitted appeals
           </h2>
 
